--- a/overlay/OPlusSystemUIResCommon/res/values/config.xml
+++ b/overlay/OPlusSystemUIResCommon/res/values/config.xml
@@ -26,4 +26,8 @@
 
     <!-- Whether usage of the proximity sensor during doze is supported -->
     <bool name="doze_proximity_sensor_supported">false</bool>
+
+    <!-- Update battery info every second when device is charging -->
+    <bool name="config_alternateFastchargeInfoUpdate">true</bool>
+
 </resources>
