--- a/overlay/FrameworksResTarget/res/values/config.xml
+++ b/overlay/FrameworksResTarget/res/values/config.xml
@@ -31,13 +31,19 @@
 
     <!-- Default files to pin via Pinner Service -->
     <string-array name="config_defaultPinnerServiceFiles">
+        <item>/apex/com.android.art/javalib/core-libart.jar</item>
+        <item>/apex/com.android.art/javalib/core-oj.jar</item>
+        <item>/apex/com.android.media/javalib/updatable-media.jar</item>
+        <item>"/system/bin/surfaceflinger"</item>
+        <item>"/system_ext/priv-app/daxService/daxService.apk"</item>
+        <item>"/system_ext/priv-app/MotoDolbyDax3/MotoDolbyDax3.apk"</item>
+        <item>"/system_ext/priv-app/SystemUI/SystemUI.apk"</item>
         <item>/system/framework/arm64/boot-framework.oat</item>
         <item>/system/framework/arm64/boot-QPerformance.oat</item>
         <item>/system/framework/arm64/boot-UxPerformance.oat</item>
         <item>/system/framework/framework.jar</item>
         <item>/system/framework/oat/arm64/services.odex</item>
         <item>/system/framework/services.jar</item>
-        <item>/apex/com.android.media/javalib/updatable-media.jar</item>
         <item>/system/lib64/libsurfaceflinger.so</item>
     </string-array>
 
