--- a/overlay-amogos/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-amogos/frameworks/base/core/res/res/values/config.xml
@@ -8,15 +8,15 @@
     <!-- Paths to the libraries that contain device specific key handlers -->
     <string-array name="config_deviceKeyHandlerLibs" translatable="false">
         <item>/system_ext/priv-app/LineageParts/LineageParts.apk</item>
-        <item>/system_ext/priv-app/OnePlusCameraHelper/OnePlusCameraHelper.apk</item>
         <item>/system_ext/priv-app/OPlusExtras/OPlusExtras.apk</item>
+        <item>/system_ext/priv-app/OnePlusCameraHelper/OnePlusCameraHelper.apk</item>
     </string-array>
 
     <!-- Names of the key handler classes -->
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
         <item>org.lineageos.lineageparts.gestures.KeyHandler</item>
-        <item>org.lineageos.camerahelper.KeyHandler</item>
         <item>org.lineageos.settings.slider.KeyHandler</item>
+        <item>org.lineageos.camerahelper.KeyHandler</item>
     </string-array>
 
     <!-- Hardware keys present on the device, stored as a bit field.
@@ -32,6 +32,14 @@
          For example, a device with Home, Back and Menu keys would set this
          config to 7. -->
     <integer name="config_deviceHardwareKeys">64</integer>
+
+        <!-- Whether device has physical tri state switch -->
+    <bool name="config_hasAlertSlider">true</bool>
+
+    <!-- The location of the devices physical tri state switch
+         0: Left side
+         1: Right side -->
+    <integer name="config_alertSliderLocation">1</integer>
 
     <!-- Hardware keys present on the device with the ability to wake, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
